# camera_reader

./: .gitignore  CMakeLists.txt  package.xml
scripts/: serial_read.py
src/: camera_reader.cpp
