<?xml version="1.0"?>
<package>
  <name>camera_reader</name>
  <version>0.0.0</version>
  <description>The camera_reader package</description>

  <maintainer email="james@todo.todo">james</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <export>
  </export>
</package>
